--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "mongoose": "^5.9.15",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
